@@ -1,4 +1,3 @@
-import org.gradle.api.internal.classpath.ModuleRegistry
 
 plugins {
     id 'java-gradle-plugin'
@@ -16,14 +15,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation("org.spockframework:spock-core:2.3-groovy-2.5") {
-        exclude group: 'org.codehaus.groovy'
-    }
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
-
+    testImplementation("org.spockframework:spock-core:2.3-groovy-2.5") { exclude group: 'org.codehaus.groovy' }
     testImplementation "org.eclipse.jgit:org.eclipse.jgit:5.0.3.201809091024-r"
     testImplementation "cglib:cglib-nodep:3.2.8"
-
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testImplementation gradleTestKit()
 
     // work-around for https://github.com/gradle/gradle/issues/16774
@@ -52,7 +47,18 @@ tasks.withType(Test).configureEach {
     dependsOn tasks.jar
     useJUnitPlatform()
     systemProperties.put('currentVersion', project.version)
+    systemProperties.put('gradleVersion', project.findProperty('gradleVersion') ?: '6.9.4')
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(project.findProperty('javaVersion') ?Integer.valueOf(project.findProperty('javaVersion')): 8)
+    }
+    if (project.findProperty('javaVersion') && Integer.valueOf(project.findProperty('javaVersion')) >= 9) {
+        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    }
 }
+
+processResources.duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
 release {
     git {
